# WordOfPrompt

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-mcp.txt  requirements.txt
config/: env.example  mcp.json  test.env
deployment/docker/: Dockerfile  docker-compose.yml
docs/: README.md  mcp-integration.md
scripts/: run_mcp_server.py  setup.sh  validate_system.py
src/: __init__.py
src/agents/: __init__.py
src/core/: __init__.py  exceptions.py  intent_classifier.py  keyword_extractor.py  llm_client.py  prompt_analyzer.py  utils.py
src/mcp/: __init__.py
src/mcp/clients/: __init__.py
src/mcp/protocols/: __init__.py  base.py  registry.py  transport.py
src/mcp/servers/: __init__.py  amazon_search.py  base.py  unified.py
src/models/: __init__.py  product.py  recommendation.py  user.py
src/tools/: __init__.py  amazon_search.py
tests/: __init__.py  test_intent_classifier.py  test_mcp_protocol.py
